objects/DMMAX__Signal__mdt.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Assert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Class__c</fullName>
        <label>Class</label>
        <referenceTo>DMMAX__SignalClass__mdt</referenceTo>
        <relationshipLabel>Signals</relationshipLabel>
        <relationshipName>Signals</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>DMMAX__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Mailmerge__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mailmerge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__MapTo__c</fullName>
        <label>Map to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Pseudo_Type__c</fullName>
        <inlineHelpText>What type of field this is</inlineHelpText>
        <label>Pseudo Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>checkbox</fullName>
                    <label>Checkbox</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__Pseudo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a pseudo field</label>
        <type>Checkbox</type>
    </fields>
    <label>Signal</label>
    <pluralLabel>Signals</pluralLabel>
</CustomObject>